# ITMO-GDS-algorithms

./: CMakeLists.txt  README.md  array.h  array.hpp  main.cpp  nanobench.h  sorting.hpp  tests.cpp
results/: 1d10_histogram.txt  1d6_histogram.txt  2d10_histogram.txt  2d6+2,3d10_histogram.txt  2d6_histogram.txt  3d10_histogram.txt  3d6_histogram.txt
